[package]
name = "cargo-pulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
cargo_metadata = "0.17.0"
chrono = "0.4.27"
crates_io_api = "0.8.1"
octocrab = "0.29.3"
tokio = "1.32.0"
