[package]
name = "cargo-pulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.17.0"
chrono = "0.4.27"
colored = "2.0.4"
crates_io_api = "0.8.1"
octocrab = { version="0.43.0", default-features=false, features = ["follow-redirect", "retry", "rustls", "timeout", "tracing", "default-client", "rustls-aws-lc-rs"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
